src/index.css
@import url('https://fonts.googleapis.com/css2?family=Reem+Kufi+Fun:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .shadow-glow {
        filter: drop-shadow(0px 0px 2px rgba(233, 86, 112, 0.2));
    }
}

.scrollbar {
    width: 500px;
    height: 150px;
    overflow-y: scroll;
    scrollbar-color: #FFD9CE transparent;
    scrollbar-width: thin;
}

::-webkit-scrollbar-track {
    border-radius: 10px;
    background-color: transparent;
}

::-webkit-scrollbar {
    width: 6px;
    background-color: transparent;
}

::-webkit-scrollbar-thumb {
    border-radius: 10px;
    box-shadow: inset 0 0 5px rgba(0, 0, 0, .3);
    background-color: #FFD9CE;
}

